--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-rows: repeat(5, auto);
+  grid-template-columns: repeat(5, auto);
+  gap: 5px;
 }
 
 .container div {
@@ -17,24 +21,41 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: 1/1/2/-1;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 .logo {
+  grid-column: 1/2;
 }
 
 .menu {
+  display: grid;
 }
 
 .menu ul {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  justify-items: center;
+  align-items: center;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: 2/1/-2/2;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 1fr;
+  row-gap: 50px;
+  column-gap: 5px;
 }
 
 .sidebar .photo {
@@ -43,9 +64,13 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  grid-column: 1/2;
 }
 
 .photo  {
+  display: grid;
+  justify-items: center;
+  align-items: center;
 }
 
 .sidebar .side-content {
@@ -53,22 +78,37 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+
+  display: grid;
+  justify-items: center;
+  align-items: center;
 }
 
 .nav {
   background-color: #FF7755;
+  grid-area: 2/2/3/-1;
 }
 
 .nav ul {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
   background-color: #bccbde;
+  grid-area: 3/2/-2/-1;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 5px;
 }
 
 .article p {
@@ -97,6 +137,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: -2/1/-1/-1;
 }
 
 .footer p {
